--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mongoose": "^5.9.25",
-    "passport": "^0.4.1",
-    "passport-discord": "^0.1.4"
+    "passport": "^0.4.1"
   }
 }
