--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-oauth2": "^1.5.0"
   }
 }
