--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
